# fto-admet

./: .env.example  .gitignore  CLAUDE.md  DRIVER.md  HARNESS_README.md  MANIFEST.yaml  README.md  STATE.json  pixi.toml  prop_card_newshape.json  pyproject.toml  run.sh
.claude/: settings.json
core/: __init__.py  aggregate.py  config.py  dispatch.py  gpu.py  ledger.py  models.py  registry.py  run.py  schemas.py  screen.py
docs/: FTO_ADMET_Codebase_And_Environment_SETTLED.md  FTO_ADMET_Model_IO_SPEC.md  FTO_ADMET_Model_Provenance_VERIFIED.md  FTO_ADMET_Pipeline_Skeleton_SETTLED.md
lib/: gate.sh  state.py
tasks/: t00-bootstrap-box.md  t00b-core-env.md  t01-core-config.md  t02-core-models.md  t03-core-schemas.md  t04-core-registry.md  t05-core-gpu.md  t06-core-ledger.md  t07-core-dispatch.md  t08-core-run.md  t09-gate-core.md  t10-model-rdkit_crippen.md  t11-model-pksmart.md  t12-gate-phase1.md  t13-model-sfi.md  t14-model-bbb_score.md  t15-model-cns_mpo.md  t16-model-boiled_egg.md  t17-model-pains_brenk.md  t18-model-toxicophores.md  t19-model-lipinski_veber_qed.md  t20-model-sascore.md  t21-model-admet_ai.md  t22-model-openadmet.md  t23-model-ctoxpred2.md  t24-model-cardiogenai.md  t25-model-smartcyp.md  t26-model-fame3r.md  t27-model-swissadme.md  t28-model-pgp.md  t29-model-bayesherg.md  t30-model-cardiotox_net.md  t31-model-rascore.md  t32-model-aizynthfinder.md  t33-model-opera.md  t34-model-pbpk.md  t35-model-admetlab3.md  t36-model-ochem_ppb.md  t37-sop-watanabe_renal.md  t38-sop-watanabe_pgp_brain.md  (+15 more)
tests/: conftest.py  test_aggregate.py  test_config.py  (+39 more)
(+251 files in other folders)
